force-app/main/default/objects/Project__c/fields/Approved_Budget_by_Customers__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget_by_Customers__c</fullName>
    <label>Approved Budget by Customers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>