force-app/main/default/objects/Project__c/fields/Completed_Project_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_Project_Tasks__c</fullName>
    <label>Completed Project Tasks</label>
    <summaryFilterItems>
        <field>ProjectTask__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>